Fixed pixel gap width

--- a/src/app/pages/editor/style.sass
+++ b/src/app/pages/editor/style.sass
@@ -1,6 +1,6 @@
 @import '../../../variables'
 
-$gap: .175rem
+$gap: 4px
 $bar-width: 2.5rem
 
 
